--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="http://fonts.googleapis.com/css?family=Walter+Turncoat&.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
     <meta charset="utf-8" />
-
-  </head>
-  <body>
     <script src="p5.easycam.min.js"></script>
     <script src="sketch.js"></script>
+    <script src="sidebar.js"></script>
+  </head>
+  <body>
+     
   </body>
 </html>
