--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+  <style>
+  </style>
   <head>
     <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">  
     <title>3D Vector Field Visualizer</title>
@@ -14,6 +16,5 @@
   <body>
     <script src="side.js"></script>   
     <script src="sketch.js"></script>
-
   </body>
 </html>
